--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Turret+Road:wght@200;300;400;500;700;800&display=swap');
+
 body {
     background-color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -7,10 +11,12 @@ body {
     overflow: hidden;
     background-color: #333;
     border: 3px transparent #ffffff; /* Bezel */ 
-    border-radius: 10px;    /* Rounded corners for bezel */
+    border-radius: 10px; /* Rounded corners for bezel */
     box-shadow: 0 2px 8px rgba(0,0,0,0.2); /* Subtle shadow for depth */
     margin-top: 10px; /* Shift 10px down */
     font-weight: bold;
+    font-family: 'Nova Square', cursive;
+    
 }
 .topnav a {
     float: left;
@@ -21,10 +27,15 @@ body {
     font-size: 17px;
 }
 .topnav a:hover {
-    background-color: #ddd;
+    background-color: #d8eff6;
     color: black;
 }
 .topnav a.active {
-    background-color: #04AA6D;
+    background-color: #2596be;
     color: white;
+}
+
+h1 {
+    font-family: 'Turret Road', cursive;
+    text-align: center;
 }
